--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 
   <h1><center>Halla gutta</center></h1>
-  <link rel="shortcut icon" type="image/x-icon" href="logo.png" />
+  <link rel="shortcut icon" type="image/png" href="logo.png" />
 
 
 </body>
