--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <html>
+<head>
+	<title> SKMU</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
+</head>
 <body>
 
-  <h1><center>Test_v2</center></h1>
-  <link rel="shortcut icon" type="image/png" href="logo.png" />
-
+	<div id="container">
+		<div id="header">
+		<center><img src="Kunst.png" /></center>
+		</div>
+		<div id="content">
+			
+			<h2> MODERNISMENS PIONERER </h2>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			
+		</div>
+		<div id="test">
+		<p><b><u>Ler mer om ustillingen.</u></b></p>
+		</div>
 
 </body>
 </html>
+
+
