--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <head>
 	<title> SKMU</title>
 	<link rel="stylesheet" type="text/css" href="style.css" />
+	<link rel="icon"  type="image/x-icon"  href="favicon.ico"/>
 </head>
 <body>
+
 
 	<div id="container">
 		<div id="header">
